wacc/test/golden/syntaxErr.basic.skpErr
# skip typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skp end


(line 11, column 11):
  unexpected "e"
  expected "=" or "["
  >
  >begin skp end
             ^
  >